crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-crabbing-interpreters__tests__cases__type_error_with_grouping.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/type_error_with_grouping.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (expr (+ (group (+ 42.0 27.0)) "something")))

----- stderr -----
