crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-crabbing-interpreters__tests__cases__use_local_in_initialiser_of_shadowing_variable.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/use_local_in_initialiser_of_shadowing_variable.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @1) [] []
      (block
         (var a (local @0) 42.0)
         (block
            (var a (local @1) (local a @0))
            (print (local a @1))
            (expr (= (local a @1) 27.0)))
         (print (local a @0))))
   (expr (call +2 (global f @1))))

----- stderr -----
